tests/specs/ecosystem/fresh/core/2_0_0_alpha_3.test
fresh/core/2.0.0-alpha.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:preact@^10.20.2": "npm:preact@10.21.0"
    },
    "npm": {
      "preact@10.21.0": {
        "integrity": "sha512-aQAIxtzWEwH8ou+OovWVSVNlFImL7xUCwJX3YMqA3U8iKCNC34999fFOnWjYNsylgfPgMexpbk7WYOLtKr/mxg==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
export type ListenOptions = Partial<Deno.ServeTlsOptions> & {
                                         ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/app.ts:4:42

error: Type checking failed.

